--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         .nav-link:hover {
             color: #6a00f5 !important; 
         }
+        .btn-login {
+            background-color: #6a00f5;
+            border: none;
+        }
+        .btn-login:hover {
+            background-color: #16ac0b;
+        }
+        .navbar-toggler {
+            background-color: #6a00f5;
+        }
+        .navbar-toggler:focus {
+            box-shadow: none;
+        }
         .card {
             background-color: #1a1a2e; 
             border: 1px solid #6a00f5; 
@@ -32,7 +45,7 @@
             margin: 0 auto; 
         }
         .card-img-top {
-            height: 300px; 
+            height: 200px; 
             width: 300px; 
             object-fit: cover; 
         }
@@ -74,18 +87,23 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contato</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="btn btn-login nav-link text-light px-3" href="#">Login</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Conteúdo -->
     <div class="container mt-5">
         <h1>Bem-vindo ao nosso site de jogos!</h1>
+        <div class="alert alert-warning mt-3" role="alert">
+            Atenção: Faça login para aproveitar todos os recursos do site!
+        </div>
+
         <p>Explore os melhores jogos e descubra novas experiências de entretenimento.</p>
 
         <div class="row">
-            <!-- Cards -->
             <div class="col-md-4 mb-4 pt-5">
                 <div class="card">
                     <img src="ps5.jpg" class="card-img-top" alt="Console">
@@ -98,9 +116,9 @@
             </div>
             <div class="col-md-4 mb-4 pt-5">
                 <div class="card">
-                    <img src="The last of us part II.webp" class="card-img-top" alt="Jogo">
+                    <img src="the last of us I.webp" class="card-img-top" alt="Jogo">
                     <div class="card-body">
-                        <h5 class="card-title">The Last of Us Part II</h5>
+                        <h5 class="card-title">The Last of Us Part I</h5>
                         <p class="card-text">Um dos jogos mais aclamados da última década.</p>
                     </div>
                     <a href="#" class="btn btn-primary">Comprar</a>
@@ -141,7 +159,7 @@
                     <img src="Red Dead Redemption.jpg" class="card-img-top" alt="Jogo">
                     <div class="card-body">
                         <h5 class="card-title">Red Dead Redemption II</h5>
-                        <p class="card-text">Red Dead Redemption 2, a épica aventura de mundo aberto da Rockstar Games aclamada pela crítica e o jogo mais bem avaliado desta geração de consoles, agora chega aprimorado para PC com conteúdos inéditos no Modo História, melhorias visuais e muito mais.</p>
+                        <p class="card-text">Red Dead Redemption 2, a épica aventura de mundo aberto da Rockstar Games.</p>
                     </div>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
@@ -149,13 +167,11 @@
         </div>
     </div>
 
-
     <footer class="bg-dark text-light text-center py-3">
         <div class="container">
             &copy; 2024 Site de Jogos. Todos os direitos reservados.
         </div>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
